@@ -1,3 +1,9 @@
+2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>
+
+	Fixes #336286
+
+	* sound-properties-capplet.c (main): switched from popt to GOptionContext.
+
 2007-01-07  Jan Arne Petersen  <jap@gnome.org>
 
 	* sound-properties-capplet.c: (setup_hal_devices): do proper
